--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
 <body>
     <div class = "container">
         <div>이름 : <input type = "text" id = "name" value = ""/> <!--input태그는 입력 태그--> </div> 
-        <div>지역 : <select id = "city"> <!--input태그는 입력 태그--> 
-            <option value="02">서울</option> <!--option태그는 선택 내역 태그-->
+        <div>지역 : <select id = "city" onchange = "changeCity();"> <!--select는 클릭이 개념이 아니라 onchange로 바뀔 때의 값으로 함수를 선언한다.-->
+            <option value="02" selected>서울</option> <!--option태그는 선택 내역 태그-->
             <option value="064">제주</option> <!--option태그는 선택 내역 태그-->
         </select> 
         </div>
-        <button type = "button" onclick="regist();">join</button> <!--onclick이라는 이벤트는 javascript function을 호출할 수 있게 해준다. -->
+        <div>
+            동네 : 
+            <select id = "region_02">
+                <option value = "">강남</option>
+                <option value = "">서초</option>
+            </select>
+            <select id = "region_064" style = display:none> <!-- 서울이 selected로 설정되어 있으므로 style를 따로 지정하여 해당 사항을 보이지 않게 한다.>
+                <option value = "">제주시</option>
+                <option value = "">서귀포시</option>
+            </select>
+        </div>
+        <button type = "button" onclick="regist();">join</button> <!--onclick이라는 이벤트는 javascript 함수를 호출할 수 있게 해준다. -->
     </div> <!--container라는 클래스 테이블 생성-->
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> <!--Jquert CDN 외부 라이브러리-->
@@ -25,8 +36,18 @@
     <script>
         function regist() {
             alert(document.getElementById("name").value); //html에 있는 name이라는 요소를 가지고 온다.
-            alert(document.getElementById("city").value); //html에 있는 city라는 요소를 가지고 온다.
+            //alert(document.getElementById("city").value); //html에 있는 city라는 요소를 가지고 온다.
+
+            //alert($("#name").val()); //jquery로 html에 있는 name이라는 요소를 가지고 온다.
+            alert($("#city").val()); //jquery로 html에 있는 city라는 요소를 가지고 온다.
+            
             alert("버튼을 클릭했습니다.");
+        }
+
+        function changeCity() {
+            let city = document.getElementById("city").value;
+
+            document.getElementById("region_" + city).style.display.  //city값이 02아니면 064가 오기 때문에 
         }
     </script>
 </body>
